removes dependency on javax.xml.bind